--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+aioredis==1.3.1
 amqp==5.0.6
 appdirs==1.4.4
 asgiref==3.3.4
+async-timeout==3.0.1
+asyncio==3.4.3
 attrs==21.2.0
 autobahn==21.3.1
 Automat==20.2.0
@@ -11,6 +14,7 @@ celery==5.0.5
 certifi==2021.5.30
 cffi==1.14.5
 channels==3.0.3
+channels-redis==3.2.0
 chardet==4.0.0
 click==7.1.2
 click-didyoumean==0.0.3
@@ -26,11 +30,13 @@ django-celery-results==2.0.1
 django-timezone-field==4.1.2
 fake-useragent==0.1.11
 feedparser==6.0.2
+hiredis==2.0.0
 hyperlink==21.0.0
 idna==2.10
 incremental==21.3.0
 kombu==5.1.0
 lxml==4.6.3
+msgpack==1.0.2
 numpy==1.20.3
 pandas==1.2.4
 parse==1.19.0
@@ -50,6 +56,7 @@ requests==2.25.1
 requests-html==0.10.0
 service-identity==21.1.0
 sgmllib3k==1.0.0
+simplejson==3.17.2
 six==1.16.0
 soupsieve==2.2.1
 sqlparse==0.4.1
